Add support for password authorization
* Add password grant in auth service
* Fix user repository
* Fix refresh token libs
* Add sandbox for the new grant type
* Update swagger and README
