# app/entities/repositories/OAuth2RefreshTokenRepository.php
@@ -3,6 +3,7 @@
 namespace App\Entities\Repositories;
 
 use App\Entities\OAuth2RefreshToken;
+use League\OAuth2\Client\Grant\RefreshToken;
 use League\OAuth2\Server\Entities\RefreshTokenEntityInterface;
 use League\OAuth2\Server\Repositories\RefreshTokenRepositoryInterface;
 
@@ -29,9 +30,12 @@ class Oauth2RefreshTokenRepository implements RefreshTokenRepositoryInterface  {
 	 */
 	public function persistNewRefreshToken(RefreshTokenEntityInterface $refreshTokenEntity) {
 
+	    /** @var RefreshToken $refreshTokenEntity */
+        $refreshTokenEntity->setIssuedAt(date('Y-m-d H:i:s'));
+
 		/** @var OAuth2RefreshToken $refreshTokenEntity */
 		if(!$refreshTokenEntity->save()) {
-			throw new \Exception('Unable to save the refresh token');
+			throw new \Exception('Unable to save the refresh token' . print_r($refreshTokenEntity->getMessages(), true));
 		}
 
 	}
